unpackaged/main/default/objects/Case/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>This field is used for Retail Customer Support Team, It is dependent on Sub Category.</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Contact Details</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Limit</fullName>
            </value>
            <value>
                <fullName>Account Payment</fullName>
            </value>
            <value>
                <fullName>134Trade</fullName>
            </value>
            <value>
                <fullName>App feedback</fullName>
            </value>
            <value>
                <fullName>App navigation/troubleshooting</fullName>
            </value>
            <value>
                <fullName>Pin reset</fullName>
            </value>
            <value>
                <fullName>Remove device</fullName>
            </value>
            <value>
                <fullName>Trade website</fullName>
            </value>
            <value>
                <fullName>Change of Mind</fullName>
            </value>
            <value>
                <fullName>Failed Promise</fullName>
            </value>
            <value>
                <fullName>Damaged Goods</fullName>
            </value>
            <value>
                <fullName>ETA</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Incorrect Email Address</fullName>
            </value>
            <value>
                <fullName>Invoice Request</fullName>
            </value>
            <value>
                <fullName>Missing Goods</fullName>
            </value>
            <value>
                <fullName>Order Edit</fullName>
            </value>
            <value>
                <fullName>Warranty Claim</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>TM/Customer</fullName>
            </value>
            <value>
                <fullName>General Stock Enquiry</fullName>
            </value>
            <value>
                <fullName>Inaccurate Inventory</fullName>
            </value>
            <value>
                <fullName>User Advice</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Spare Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>