unpackaged/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>This field determines the subtype of the case and drives validation rules.</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Contract Amendment</fullName>
            </value>
            <value>
                <fullName>Contract Review - Changes Required</fullName>
            </value>
            <value>
                <fullName>New Project Contract</fullName>
            </value>
            <value>
                <fullName>Update Project Contract Participants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>