unpackaged/main/default/objects/Case/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <inlineHelpText>Supplier linked to the case</inlineHelpText>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Absco</fullName>
            </value>
            <value>
                <fullName>ACM</fullName>
            </value>
            <value>
                <fullName>Adeval/Garth</fullName>
            </value>
            <value>
                <fullName>Adventure Operations</fullName>
            </value>
            <value>
                <fullName>Allegion</fullName>
            </value>
            <value>
                <fullName>Amalgamated Hardware</fullName>
            </value>
            <value>
                <fullName>Ames/Cyclone</fullName>
            </value>
            <value>
                <fullName>Aquatec</fullName>
            </value>
            <value>
                <fullName>Arlec</fullName>
            </value>
            <value>
                <fullName>Assa Abloy</fullName>
            </value>
            <value>
                <fullName>Bedford</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Breville</fullName>
            </value>
            <value>
                <fullName>Briggs &amp; Stratton</fullName>
            </value>
            <value>
                <fullName>Caroma</fullName>
            </value>
            <value>
                <fullName>DATS</fullName>
            </value>
            <value>
                <fullName>Daytek</fullName>
            </value>
            <value>
                <fullName>Edco</fullName>
            </value>
            <value>
                <fullName>Everhard</fullName>
            </value>
            <value>
                <fullName>Fiskars</fullName>
            </value>
            <value>
                <fullName>Fiskars/Horticom</fullName>
            </value>
            <value>
                <fullName>Fitzone</fullName>
            </value>
            <value>
                <fullName>Flurida</fullName>
            </value>
            <value>
                <fullName>Foreno</fullName>
            </value>
            <value>
                <fullName>GAF control</fullName>
            </value>
            <value>
                <fullName>Gale Pacific</fullName>
            </value>
            <value>
                <fullName>Genesis</fullName>
            </value>
            <value>
                <fullName>GSM</fullName>
            </value>
            <value>
                <fullName>Harco</fullName>
            </value>
            <value>
                <fullName>Harkness and Young</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>