unpackaged/main/default/objects/Case/fields/Tender_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Tender_Close_Date__c</fullName>
    <description>Pulls in the Tender Close Date from the related Opportunity</description>
    <formula>Opportunity__r.Tender_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tender Close Date</label>
    <type>Date</type>
</CustomField>