unpackaged/main/default/objects/Case/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <formula>Source:EmailMessage.ThreadIdentifier</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thread</label>
    <type>Text</type>
</CustomField>