unpackaged/main/default/objects/Case/fields/Threading_Token__c.field-meta.xml
<CustomField>
    <fullName>Threading_Token__c</fullName>
    <label>Threading Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>