unpackaged/main/default/objects/Case/fields/Total_Cost_incl_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_incl_GST__c</fullName>
    <formula>Opportunity__r.SyncedQuote.Total_Cost_incl_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost (incl GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>