unpackaged/main/default/objects/Case/fields/Total_Open_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Duration__c</fullName>
    <formula>IF(ISNULL( Reopened_Datetime__c ), IF(ISNULL(ClosedDate), NOW()- CreatedDate , ClosedDate - CreatedDate ), Previous_Duration__c +  Reopen_Age__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Open Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>