unpackaged/main/default/objects/Case/fields/Total_Value_excl_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_excl_GST__c</fullName>
    <formula>Opportunity__r.SyncedQuote.Total_Value_excl_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value (excl. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>