unpackaged/main/default/objects/Case/fields/X1st_Closure_Datetime__c.field-meta.xml
<CustomField>
    <fullName>X1st_Closure_Datetime__c</fullName>
    <label>1st Closure Datetime</label>
    <type>DateTime</type>
</CustomField>