unpackaged/main/default/objects/Case/recordTypes/AU_Contract_Requests.recordType-meta.xml
<RecordType>
    <fullName>AU_Contract_Requests</fullName>
    <active>true</active>
    <businessProcess>Contract Request</businessProcess>
    <description>Record type for AU Contract Requests</description>
    <label>Contract Requests</label>
</RecordType>