unpackaged/main/default/objects/Case/recordTypes/AU_Project_Contract_Request.recordType-meta.xml
<RecordType>
    <fullName>AU_Project_Contract_Request</fullName>
    <active>true</active>
    <businessProcess>Contract Request</businessProcess>
    <description>For AU Project Contract Requests</description>
    <label>AU Project Contract Request</label>
</RecordType>