unpackaged/main/default/objects/Case/recordTypes/F_T_Request.recordType-meta.xml
<RecordType>
    <fullName>F_T_Request</fullName>
    <active>true</active>
    <businessProcess>F%26T Request</businessProcess>
    <label>F&amp;T Request</label>
</RecordType>