unpackaged/main/default/objects/Case/recordTypes/Farm_Shed_Price_Submission.recordType-meta.xml
<RecordType>
    <fullName>Farm_Shed_Price_Submission</fullName>
    <active>true</active>
    <businessProcess>Farm Shed Price Submission</businessProcess>
    <label>Farm Shed Price Submission</label>
</RecordType>