unpackaged/main/default/objects/Case/recordTypes/Farm_Shed_Reprice_Request.recordType-meta.xml
<RecordType>
    <fullName>Farm_Shed_Reprice_Request</fullName>
    <active>true</active>
    <businessProcess>Farm Shed Price Submission</businessProcess>
    <label>Farm Shed Reprice Request</label>
</RecordType>