unpackaged/main/default/objects/Case/recordTypes/NCQ_Request.recordType-meta.xml
<RecordType>
    <fullName>NCQ_Request</fullName>
    <active>true</active>
    <businessProcess>Quote Request</businessProcess>
    <label>NCQ Request</label>
</RecordType>