unpackaged/main/default/objects/Case/recordTypes/NZ_Contract_Requests.recordType-meta.xml
<RecordType>
    <fullName>NZ_Contract_Requests</fullName>
    <active>true</active>
    <businessProcess>Contract Request</businessProcess>
    <description>Record type for NZ Contract Requests</description>
    <label>Contract Request</label>
</RecordType>