unpackaged/main/default/objects/Case/recordTypes/NZ_Project_Contract_Request.recordType-meta.xml
<RecordType>
    <fullName>NZ_Project_Contract_Request</fullName>
    <active>true</active>
    <businessProcess>Contract Request</businessProcess>
    <description>For NZ Project Contract Requests</description>
    <label>NZ Project Contract Request</label>
</RecordType>