unpackaged/main/default/objects/Case/recordTypes/Organisation_Tender_Request.recordType-meta.xml
<RecordType>
    <fullName>Organisation_Tender_Request</fullName>
    <active>true</active>
    <businessProcess>Organisation Tender Request</businessProcess>
    <label>Organisation Tender Request</label>
</RecordType>