unpackaged/main/default/objects/Case/recordTypes/Price_Submission.recordType-meta.xml
<RecordType>
    <fullName>Price_Submission</fullName>
    <active>true</active>
    <businessProcess>Price Submission</businessProcess>
    <label>Price Submission</label>
</RecordType>