unpackaged/main/default/objects/Case/recordTypes/Project_Contract_Request.recordType-meta.xml
<RecordType>
    <fullName>Project_Contract_Request</fullName>
    <active>false</active>
    <businessProcess>Contract Request</businessProcess>
    <label>Project Contract Request</label>
</RecordType>