unpackaged/main/default/objects/Case/recordTypes/Quote_Request.recordType-meta.xml
<RecordType>
    <fullName>Quote_Request</fullName>
    <active>true</active>
    <businessProcess>Quote Request</businessProcess>
    <description>Record type for Quote Requests</description>
    <label>Quote Request</label>
</RecordType>