unpackaged/main/default/objects/Case/recordTypes/Reprice_Request.recordType-meta.xml
<RecordType>
    <fullName>Reprice_Request</fullName>
    <active>true</active>
    <businessProcess>Price Submission</businessProcess>
    <label>Reprice Request</label>
</RecordType>