unpackaged/main/default/objects/Case/recordTypes/Retail_Customer_Support.recordType-meta.xml
<RecordType>
    <fullName>Retail_Customer_Support</fullName>
    <active>true</active>
    <businessProcess>Retail Customer Support Process</businessProcess>
    <description>Record type to capture the customer support cases</description>
    <label>Retail Customer Support</label>
</RecordType>