unpackaged/main/default/objects/Case/recordTypes/Retail_Spare_Parts_Support.recordType-meta.xml
<RecordType>
    <fullName>Retail_Spare_Parts_Support</fullName>
    <active>true</active>
    <businessProcess>Retail Customer Support Process</businessProcess>
    <description>Record type to capture the Spare parts cases</description>
    <label>Retail Spare Parts Support</label>
</RecordType>