unpackaged/main/default/objects/Case/recordTypes/S_I_Request.recordType-meta.xml
<RecordType>
    <fullName>S_I_Request</fullName>
    <active>true</active>
    <businessProcess>S%26I Request</businessProcess>
    <description>Record type for S&amp;I Requests</description>
    <label>S&amp;I Request</label>
</RecordType>