unpackaged/main/default/objects/Case/recordTypes/Trade_Assist.recordType-meta.xml
<RecordType>
    <fullName>Trade_Assist</fullName>
    <active>true</active>
    <businessProcess>Trade Assist</businessProcess>
    <label>Trade Assist</label>
</RecordType>