unpackaged/main/default/objects/Case/recordTypes/Voice_of_Customer.recordType-meta.xml
<RecordType>
    <fullName>Voice_of_Customer</fullName>
    <active>true</active>
    <businessProcess>Voice Of Customer</businessProcess>
    <description>Case type to Log Voice of Customer</description>
    <label>Voice of Customer</label>
</RecordType>