unpackaged/main/default/objects/Case/validationRules/Contract_Amendment_Creation_conditions.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Amendment_Creation_conditions</fullName>
    <active>true</active>
    <description>This validation rule ensures that only the Contract Owner and Admin can create Contract Requests with subtype Contract Amendment. The related Contract must be either in Status Approved, Active or Submitted.</description>
    <errorConditionFormula>ISNEW()&amp;&amp;
TEXT(Subtype__c) = &quot;Contract Amendment&quot;&amp;&amp;
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))&amp;&amp;
(Is_Contract_Owner_Logged_in_User__c &lt;&gt; TRUE||
ISPICKVAL( Contract_Number__r.Status__c ,&quot;Draft&quot;)||
ISPICKVAL( Contract_Number__r.Status__c ,&quot;Expired&quot;)||
ISPICKVAL(Contract_Number__r.Status__c , &quot;Rejected&quot;)||
ISPICKVAL(Contract_Number__r.Status__c , &quot;Reviewed&quot;)||
ISPICKVAL(Contract_Number__r.Status__c , &quot;Pending&quot;))</errorConditionFormula>
    <errorMessage>An amendment can only be requested by the Contract owner for Approved, Active and Submitted Contracts.</errorMessage>
</ValidationRule>