unpackaged/main/default/objects/Case/validationRules/New_Project_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Project_Contract</fullName>
    <active>true</active>
    <description>Validation for Project Contract Case fields</description>
    <errorConditionFormula>(ISBLANK( Contract_States__c ) ||
ISBLANK( Cost_Zones__c ))&amp;&amp;

 TEXT(Subtype__c) = &quot;New Project Contract&quot;</errorConditionFormula>
    <errorMessage>Please make sure this Project Contract Case has the correct Contract State(s) and Cost Zone(s)</errorMessage>
</ValidationRule>