unpackaged/main/default/objects/Case/validationRules/Opportunity_Stage_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Stage_Not_Allowed</fullName>
    <active>false</active>
    <description>Opportunity with Stages Qualifying and Proposal In Progress cannot have a new a case.</description>
    <errorConditionFormula>OR(ISPICKVAL(Opportunity__r.StageName, &quot;Qualifying&quot;),ISPICKVAL(Opportunity__r.StageName, &quot;Proposal In Progress&quot;))</errorConditionFormula>
    <errorMessage>An opportunity cannot be used while it is in Qualifying or Proposal In Progress stages.</errorMessage>
</ValidationRule>