unpackaged/main/default/objects/Case/validationRules/Require_Awaiting_Info_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Awaiting_Info_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status ,&#39;Awaiting Info&#39;),
ISBLANK(TEXT(Awaiting_Information_Reason__c)),
RecordType.DeveloperName = &#39;Trade_Assist&#39;)</errorConditionFormula>
    <errorMessage>Awaiting information reason is mandatory when status is Awaiting Info.</errorMessage>
</ValidationRule>