unpackaged/main/default/objects/Case/validationRules/V_of_C_Edit_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>V_of_C_Edit_Restriction</fullName>
    <active>true</active>
    <description>Limits all users to read only access to VOC case type except those with the permission set and admins</description>
    <errorConditionFormula>NOT($Permission.Edit_VOC_Case)  &amp;&amp;  RecordType.Name = &#39;Voice of Customer&#39;  &amp;&amp;  NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c,
$Profile.Name))</errorConditionFormula>
    <errorMessage>You have insufficient privilege to edit VOC case</errorMessage>
</ValidationRule>