unpackaged/main/default/objects/Case/validationRules/Validation_Contract_Number_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Contract_Number_mandatory</fullName>
    <active>true</active>
    <description>This validation error ensures that if Subtype = Contract Amendment then Contract Number must be populated.</description>
    <errorConditionFormula>AND(
ISPICKVAL( Subtype__c , &quot;Contract Amendment&quot;),
ISBLANK( Contract_Number__c )
)</errorConditionFormula>
    <errorDisplayField>Contract_Number__c</errorDisplayField>
    <errorMessage>Please select a related Contract</errorMessage>
</ValidationRule>