unpackaged/main/default/objects/Case/validationRules/Validation_on_Amendment_Type_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Amendment_Type_mandatory</fullName>
    <active>true</active>
    <description>This validation rule ensures that if the Contract Request Subtype = Contract Amendment, Amendment Type must be populated.</description>
    <errorConditionFormula>AND(
ISPICKVAL( Subtype__c ,&quot;Contract Amendment&quot;),
ISBLANK(TEXT( Amendment_Type__c ))
)</errorConditionFormula>
    <errorDisplayField>Amendment_Type__c</errorDisplayField>
    <errorMessage>Please select an amendment type.</errorMessage>
</ValidationRule>