unpackaged/main/default/objects/Case/validationRules/Validation_on_NZ_State_NI.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_NZ_State_NI</fullName>
    <active>true</active>
    <description>This validation rule ensures that:
If State = NI only NZ CZ 1, NZ CZ 2, NZ CZ 3, NZ CZ 4 options can be selected</description>
    <errorConditionFormula>AND(
INCLUDES( Contract_States__c ,&#39;NI&#39;),
OR(
INCLUDES( Cost_Zones__c ,&#39;NZ CZ 5&#39;),
INCLUDES( Cost_Zones__c ,&#39;NZ CZ 6&#39;),
INCLUDES( Cost_Zones__c ,&#39;NZ CZ 7&#39;)))</errorConditionFormula>
    <errorDisplayField>Cost_Zones__c</errorDisplayField>
    <errorMessage>You may only select the following Cost Zones for this State.
- NZ CZ 1
- NZ CZ 2
- NZ CZ 3
- NZ CZ 4</errorMessage>
</ValidationRule>