unpackaged/main/default/objects/Case/validationRules/Validation_on_NZ_State_SI.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_NZ_State_SI</fullName>
    <active>true</active>
    <description>This validation rule ensures that:
If State = SI only NZ CZ5, NZ 6, NZ 7 options can be selected</description>
    <errorConditionFormula>AND(
INCLUDES( Contract_States__c ,&#39;SI&#39;),
OR(
INCLUDES( Cost_Zones__c ,&#39;NZ CZ 1&#39;),
INCLUDES( Cost_Zones__c ,&#39;NZ CZ 2&#39;),
INCLUDES( Cost_Zones__c ,&#39;NZ CZ 3&#39;),
INCLUDES( Cost_Zones__c ,&#39;NZ CZ 4&#39;)))</errorConditionFormula>
    <errorDisplayField>Cost_Zones__c</errorDisplayField>
    <errorMessage>You may only select the following Cost Zones for this State
- NZ CZ 5 
- NZ CZ 6
- NZ CZ 7</errorMessage>
</ValidationRule>