unpackaged/main/default/objects/Case/validationRules/Validation_On_Rejection_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_On_Rejection_Comments</fullName>
    <active>true</active>
    <description>A validation rule for rejection comments when rejection reason is set to &quot;others&quot;.</description>
    <errorConditionFormula>AND(
	ISPICKVAL(Rejection_Reason__c ,&#39;Other&#39;),
	ISBLANK(Rejection_Comments__c)
)</errorConditionFormula>
    <errorDisplayField>Rejection_Comments__c</errorDisplayField>
    <errorMessage>Please enter a rejection comment.</errorMessage>
</ValidationRule>