unpackaged/main/default/objects/Case/validationRules/Validation_On_Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_On_Rejection_Reason</fullName>
    <active>true</active>
    <description>A validation for rejection reason when case status is set to &quot;rejected&quot; for S&amp;I Requests</description>
    <errorConditionFormula>AND(
	ISPICKVAL(Status ,&#39;Rejected&#39;),
	ISBLANK(TEXT(Rejection_Reason__c)),
        RecordType.DeveloperName = &#39;S_I_Request&#39;
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please select a rejection reason.</errorMessage>
</ValidationRule>