unpackaged/main/default/objects/Case/listViews/Admin_Account_Managed_Requests.listView-meta.xml
<ListView>
    <fullName>Admin_Account_Managed_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Account_Owner__c</columns>
    <columns>Account_Owner_Profile__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Case_Reason_Subtype__c</field>
        <operation>equals</operation>
        <value>Account Managed</value>
    </filters>
    <label>Admin: Account Managed Requests</label>
    <queue>I_B_Trade_Assist_Requests_AU</queue>
</ListView>