unpackaged/main/default/objects/Case/listViews/Admin_Form_Leads.listView-meta.xml
<ListView>
    <fullName>Admin_Form_Leads</fullName>
    <booleanFilter>2 AND (1 OR 3)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.REASON</columns>
    <columns>Case_Reason_Subtype__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Online request for quote - 134 Trade,Cosiquo - SharePoint List Item Insertion Issue</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CASES.REASON</field>
        <operation>equals</operation>
        <value>Form Lead</value>
    </filters>
    <label>Admin: Form Leads</label>
    <queue>I_B_Trade_Assist_Requests_AU</queue>
</ListView>