unpackaged/main/default/objects/Case/listViews/Admin_In_Progress_Trade_Assist_Cases.listView-meta.xml
<ListView>
    <fullName>Admin_In_Progress_Trade_Assist_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Reopened_Datetime__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In_Progress,In Progress</value>
    </filters>
    <filters>
        <field>CASES.REASON</field>
        <operation>notEqual</operation>
        <value>Whole of build</value>
    </filters>
    <label>Admin: In Progress Trade Assist (CW2)</label>
    <queue>I_B_Trade_Assist_Requests_AU</queue>
</ListView>