unpackaged/main/default/objects/Case/listViews/Admin_New_Order_Requests_NOR.listView-meta.xml
<ListView>
    <fullName>Admin_New_Order_Requests_NOR</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.REASON</field>
        <operation>equals</operation>
        <value>New Order/Quote Request</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Admin: New Order Requests (NOR)</label>
    <queue>I_B_Trade_Assist_Requests_AU</queue>
</ListView>